--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </header>
     <section>
         <button id="drawBtn">Start</button>
-        <canvas id='transparentcanvas' width="350" height="350"></canvas>
-        <canvas id='rubikscanvas' width="350" height = "350"></canvas>
+        <canvas id='transparentCanvas' width="350" height="350"></canvas>
+        <canvas id='rubiksCanvas' width="350" height = "350"></canvas>
     </section>
       <script src="month.js"></script>
       <script src="coordinates.js"></script>
