--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html> 
 <html>
   <head>
+        <link rel = "stylesheet" href = "style.css">
   </head>
   <body>
     <header>
-      <h1>Kyoob</h1>
     </header>
     <section>
-        <button id="drawBtn">Start</button>
-        <canvas id='transparentCanvas' width="800" height="800"></canvas>
-        <canvas id='rubiksCanvas' width="800" height = "800"></canvas>
+        <button id = "drawBtn" >Start</button>
+        <canvas id = "transparentCanvas" width = "100" height = "100"></canvas>
+          <h1>Kyoob</h1>
+        <canvas id = "rubiksCanvas" width = "100" height = "100"></canvas>
+        <img id = "profile" href = "./images/profile.jpg"></img>
+        <p>Glad to see you here! I'm Abhinav.</p>
+        <p>Take a look at what I'm working on: </p>
     </section>
-      <script src="coordinates.js"></script>
-      <script src="draw.js"></script>
-      <script src="cube.js"></script>
+      <script src = "coordinates.js"></script>
+      <script src = "draw.js"></script>
+      <script src = "main.js"></script>
   </body>
 </html>
