--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <h1>Welcome!</h1>
     <canvas id = "transparentCanvas" width = "150" height = "150"></canvas>
 
-    <img id = "profile" href = "images/profile.jpg"/>
+    <img href = "profile.jpg"/>
 
-    <p>Glad to see you here! I'm Abhinav.</p>
+    <p>Glad to see you here! I'm Abhinav, a first-year computer science student at the University of Washington.</p>
     <p>Take a look at what I'm working on: </p>
 
         <a class = "fa fa-github-square" href = "https://www.github.com/abx393" target = "_blank"></a>
