--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
       
     <script src = "scripts/coordinates.js"></script>
     <script src = "scripts/draw.js"></script>
-    <script data-main="scripts/main" src="scripts/require.js"></script>
-    <!--<script src = "scripts/main.js"></script>-->
+    <script src = "scripts/main.js"></script>
       
   </body>
 </html>
