--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
       <p>Developed Android application and React web app to crowdsource anonymous user location data.</p>
       <p>App displays real-time heatmap visualization of crowds, overlayed on a Google Maps interface.</p>
       <p>Built during UW Hack'20 hackathon in a team of four members; finished top 3 out of 81 projects.</p>
-      <p>View source code <a href="https:wwww.github.com/abhaybd/DawgMaps">here</a>.</p>
+      <p>View source code <a href="https:www.github.com/abhaybd/DawgMaps">here</a>.</p>
     </div>
     </br>
 
     <div>
       <h2>Libra</h2>
-      <p>Contributed to open-source Python automatic machine learning (autoML) library that automates machine learning
+      <p>Contributed to open-source automatic machine learning (autoML) library that automates machine learning
         preprocessing, model building, training, and evaluation.</p>
       <p>Personal contributions: Developed backend for image classification (convolutional neural networks) and
         artificial image generation (generative adversarial networks) queries. </p>
