--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         preprocessing, model building, training, and evaluation.</p>
       <p>Personal contributions: Developed backend for image classification (convolutional neural networks) and
         artificial image generation (generative adversarial networks) queries. </p>
-      <p>Library has over 10,000 downloads.</p>
+      <p>Library has over 17,000 downloads. View source code <a href="https:www.github.com/palashio/libra">here</a></p>
     </div>
 
     <script src = "scripts/coordinates.js"></script>
