Update work experiences

--- a/index.html
+++ b/index.html
@@ -22,17 +22,37 @@
     <button id = "drawBtn" >Start</button>
     <h1 id="about-me-h1">About me</h1>
 
-    <p>Hello! I'm Abhinav Bandari, a first-year computer science student at the University of Washington's Paul Allen School of Computer Science and Engineering. </p>
+    <p>Hello! I'm Abhinav Bandari, a third-year computer science student at the University of Washington's Paul Allen School of Computer Science and Engineering. </p>
     <p>I've worked on computer science research, contributed to open source projects, worked on independent projects, and participated in hackathons. See more below! </p>
 
     <a class="fa fa-github" href="https://www.github.com/abx393" target="_blank"></a>
-    <a class="fa fa-linkedin" href="https://www.linkedin.com/in/abhinav-bandari-538696166/" target="_blank"></a>
-    <a class="fa fa-envelope-square" href="mailto:abandari99@gmail.com"></a>
+    <a class="fa fa-linkedin" href="https://www.linkedin.com/in/abhinavbandari" target="_blank"></a>
+    <a class="fa fa-envelope-square" href="abandari@cs.washington.edu"></a>
 
     <canvas class="cube" id="transparentCanvas" width="250" height="250"></canvas>
 
     <h1 id="experience-h1">Work Experience</h1>
     </br>
+    <div>
+      <h2>Software Engineer Intern, Arista Networks</h2>
+      <p>Developed and shipped feature to efficiently store and query IPv6
+      addresses in radix tree map.</p>
+      <p>Built anomaly and outlier detection algorithms for round-trip time
+      of packets sent over the network, using Elasticsearch and Kibana.</p>
+    </div>
+    </br>
+
+    <div>
+      <h2>Software Engineer Intern, 98point6</h2>
+      <p>Developed automated operations dashboard for Platform Engineering
+      team using AWS CDK.</p>
+      <p>Integrated metrics from Splunk Infrastructure Monitoring and AWS
+      CloudWatch, Support, and Health services.</p>
+      <p>Developed Tableau Web Data Connectors using AWS SDK, REST APIs to
+      automatically pull metrics data.</p>
+    </div>
+    </br>
+
 
     <div>
       <h2>Research Assistant, Ubiquitous Computing Laboratory, University of Washington-Seattle</h2>
