--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <button id = "drawBtn" >Start</button>
     <h1 id="about-me-h1">About me</h1>
 
-    <p>Hello! I'm Abhinav Bandari, a third-year computer science student at the University of Washington's Paul Allen School of Computer Science and Engineering. </p>
+    <p>Hello! I'm Abhinav Bandari, a senior studying computer science at the University of Washington's Paul Allen School of Computer Science and Engineering. </p>
     <p>I've worked on computer science research, contributed to open source projects, worked on independent projects, and participated in hackathons. See more below! </p>
 
     <a class="fa fa-github" href="https://www.github.com/abx393" target="_blank"></a>
