--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <a class="fa fa-github" href="https://www.github.com/abx393" target="_blank"></a>
     <a class="fa fa-linkedin" href="https://www.linkedin.com/in/abhinavbandari" target="_blank"></a>
-    <a class="fa fa-envelope-square" href="abandari@cs.washington.edu"></a>
+    <a class="fa fa-envelope-square" href="mailto:abandari@cs.washington.edu"></a>
 
     <canvas class="cube" id="transparentCanvas" width="250" height="250"></canvas>
 
