add other cube sizes

--- a/index.html
+++ b/index.html
@@ -104,11 +104,20 @@
 
     <h1 id="puzzles-h1">Puzzle Collection</h1>
     <div style="width: 100%;">
+      <!--
       <div style="width: 250px; float:left;">
         <canvas class="cube" id="transparentCanvas" width="200" height="200"></canvas>
       </div>
+      -->
+
       <div style="margin-left:100px; float:left; width:250px;">
-        <canvas class="cube" id = "rubiksCanvas" width = "200" height = "200"></canvas>
+        <canvas class="cube" id = "2x2rubiksCanvas" width = "150" height = "150"></canvas>
+      </div>
+      <div style="margin-left:100px; float:left; width:250px;">
+        <canvas class="cube" id = "3x3rubiksCanvas" width = "200" height = "200"></canvas>
+      </div>
+      <div style="margin-left:100px; float:left; width:250px;">
+        <canvas class="cube" id = "4x4rubiksCanvas" width = "250" height = "250"></canvas>
       </div>
       <div style="margin-left:100px; float:left; width:250px;">
         <canvas class="cube" id="pyraminxCanvas" width="200" height="200"></canvas>
