--- a/index.html
+++ b/index.html
@@ -110,16 +110,19 @@
       </div>
       -->
 
-      <div style="margin-left:100px; float:left; width:250px;">
+      <div style="margin-left:0px; float:left; width:250px;">
         <canvas class="cube" id = "2x2rubiksCanvas" width = "150" height = "150"></canvas>
       </div>
-      <div style="margin-left:100px; float:left; width:250px;">
+      <div style="margin-left:0px; float:left; width:250px;">
         <canvas class="cube" id = "3x3rubiksCanvas" width = "200" height = "200"></canvas>
       </div>
-      <div style="margin-left:100px; float:left; width:250px;">
+      <div style="margin-left:50px; float:left; width:250px;">
         <canvas class="cube" id = "4x4rubiksCanvas" width = "250" height = "250"></canvas>
       </div>
       <div style="margin-left:100px; float:left; width:250px;">
+        <canvas class="cube" id = "7x7rubiksCanvas" width = "300" height = "300"></canvas>
+      </div>
+      <div style="margin-left:0px; float:left; width:250px;">
         <canvas class="cube" id="pyraminxCanvas" width="200" height="200"></canvas>
       </div>
     </div>
