--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <a class="fa fa-github" href="https://www.github.com/abx393" target="_blank"></a>
     <a class="fa fa-linkedin" href="https://www.linkedin.com/in/abhinavbandari" target="_blank"></a>
-    <a class="fa fa-envelope-square" href="mailto:abandari@cs.washington.edu"></a>
+    <a class="fa fa-envelope-square" href="mailto://abandari@cs.washington.edu"></a>
 
     <h1 id="experience-h1">Work Experience</h1>
     </br>
@@ -78,7 +78,7 @@
       <p>In the COVID-19 era, users will benefit from having real-time information on which locations are
         safe to visit.</p>
       <p>Built during UW Hack'20 hackathon in a team of four members; finished top 3 out of 81 projects.</p>
-      <p>View source code <a href="https:www.github.com/abhaybd/DawgMaps">here</a>.</p>
+      <p>View source code <a href="//www.github.com/abhaybd/DawgMaps">here</a>.</p>
     </div>
     </br>
 
@@ -88,7 +88,7 @@
         preprocessing, model building, training, and evaluation.</p>
       <p>Personal contributions: Developed backend for image classification (convolutional neural networks) and
         artificial image generation (generative adversarial networks) queries. </p>
-      <p>Library has over 17,000 downloads. View source code <a href="https:www.github.com/palashio/libra">here</a></p>
+      <p>Library has over 17,000 downloads. View source code <a href="//www.github.com/palashio/libra">here</a></p>
     </div>
     </br>
 
